<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/teste2"
        android:layout_width="121dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/teste_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teste1" />

    <Button
        android:id="@+id/verificar"
        android:layout_width="121dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:text="@string/verificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teste3"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="228dp"
        android:layout_height="74dp"
        android:layout_marginStart="20dp"
        android:text="@string/o_que"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/faca_teste"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introducao" />

    <TextView
        android:id="@+id/introducao"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo1" />

    <Button
        android:id="@+id/teste1"
        android:layout_width="121dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/teste_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo2" />

    <Button
        android:id="@+id/teste3"
        android:layout_width="121dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/teste_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teste2" />

    <TextView
        android:id="@+id/resposta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/resposta_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/teste1"
        app:layout_constraintTop_toBottomOf="@+id/titulo2" />

    <TextView
        android:id="@+id/resposta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/resposta_2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/teste2"
        app:layout_constraintTop_toBottomOf="@+id/resposta1" />

    <TextView
        android:id="@+id/resposta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/resposta_3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/teste3"
        app:layout_constraintTop_toBottomOf="@+id/resposta2" />

    <TextView
        android:id="@+id/ResultadoFinal"
        android:layout_width="165dp"
        android:layout_height="97dp"
        android:text="@string/resultado"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toEndOf="@+id/verificar"
        app:layout_constraintTop_toBottomOf="@+id/resposta3"
        app:layout_constraintVertical_bias="0.863" />

</androidx.constraintlayout.widget.ConstraintLayout>